# quasar

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  physics-regression.yml
analysis/: metrics.py
benchmarks/: chi_vs_fidelity.py  throughput.py
configs/: __init__.py  scenario1_equidistant.yaml  scenario1_uneven.yaml  scenario2_moving.yaml  scenario3_city.yaml  scenario4_uk_opt.yaml  schema.py
configs/presets/: devices_baseline.yaml  weather.yaml
dashboard/: app.py  components.py
docs/: CHANGELOG.md  architecture.md  index.md  mkdocs.yml  quasar_physics.tex
docs/physics/: README.md  aging.md  channel_model.md  nonmarkovian.md  raman.md
examples/: coexistence_sweep.py  live_fiber_twin.py  metro_demo.json
scripts/: report.py  run_scenario.py  sweep.py
sequence_ext/: __init__.py
sequence_ext/io/: __init__.py  logging.py  metrics.py  recorder.py  writers.py
sequence_ext/orchestrator/: __init__.py  events.py  mdi_controller.py  orchestrator.py
sequence_ext/physics/: __init__.py  detectors.py  fiber.py  free_space.py  profiles.py
sequence_ext/scenarios/: __init__.py  scenario1_static.py  scenario2_moving.py  scenario3_city.py  scenario4_uk_opt.py
sequence_ext/topo/: __init__.py  builders.py  geometry.py  routing.py
sequence_ext/viz/: __init__.py  dashboard.py  plots.py
src/qndt/: __init__.py
src/qndt/control_plane/: async_plane.py  load.py  routing.py
src/qndt/core/: bus.py  composer.py  context.py  orchestrator.py
src/qndt/gui/: app.py  main_window.py  scenario_editor.py  simulation_controller.py  simulation_runner.py  telemetry_viewer.py
src/qndt/gui/dashboard/: aging_plot.py  dashboard_window.py  fidelity_plot.py  key_rate_plot.py  network_heatmap.py  nonmarkov_plot.py  plot_utils.py  qber_plot.py  raman_plot.py
src/qndt/gui/panels/: aging_panel.py  base_panel.py  channel_panel.py  coexistence_panel.py  control_plane_panel.py  telemetry_panel.py
src/qndt/gui/styles/: dark.qss
src/qndt/gui/topology/: canvas.py  link_item.py  node_item.py  node_palette.py  topology_model.py
src/qndt/io/: adapters.py  config.py
src/qndt/physics/: aging.py  channels.py  kernels.py  key_rate.py  master_equation.py  raman.py
src/qndt/quantum/: tracker.py
src/qndt/quantum/backends/: quimb_adapter.py
src/qndt/telemetry/: calibration.py  engine.py  resampler.py  sources.py
tests/: conftest.py  test_adapters.py  test_aging.py  test_architecture.py  test_channels.py  test_composer.py  test_configs.py  test_control_plane.py  test_imports.py  test_key_rate.py  test_nonmarkovianity.py  test_orchestrator.py  test_physics.py  test_ptm_analytic_limits.py  test_raman.py  test_resampler.py  test_scenarios.py  test_scripts.py  test_tracker.py  test_viz.py
tests/test_gui/: conftest.py  test_canvas.py  test_dashboard.py  test_main_window.py  test_panels.py  test_telemetry_viewer.py  test_wiring.py
