[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar"
version = "0.0.1"
description = "MDI-QKD network simulator extensions and visualisations (SeQUeNCe-based)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sequence>=0.7",          # SeQUeNCe simulator
  "numpy>=1.26,<2",
  "pandas>=2.1,<3",
  "pyarrow>=16",
  "networkx>=3.2",
  "matplotlib>=3.8",
  "plotly>=5.22",
  "streamlit>=1.36",
  "pydantic>=2.7",
  "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","PIE","TID","SIM","PTH"]
lint.ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
