[project]
name = "qndt"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "scipy>=1.12",
    "quimb>=1.7",
    "anyio>=4.3",
    "pydantic>=2.6",
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "networkx>=3.3",
    "pandas>=2.2",         # CSV telemetry ingestion
    "httpx>=0.27",         # JSON stream source
    "matplotlib>=3.8",     # static example plots (coexistence_sweep.py)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pytest-anyio>=0.0.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy==2.1.0",
]

[project.scripts]
quasar = "qndt.gui.app:main"
quasar-sim = "qndt.core.orchestrator:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qndt"]

[tool.hatch.build.targets.editable]
packages = ["src/qndt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "physics_regression: marks physics analytic-limit regression tests",
    "architecture: static §3 architecture-law conformance tests (AST + import analysis)",
]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyqtgraph.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paho.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true
